--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </h2>
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
-    <script type="text/javascript" src="assets/javascript/game.js/"></script>
+    <script type="text/javascript" src="./assets/javascript/game/game.js"></script>
 </body>
 
 </html>
